# GameOfUr-Minimax-C

./: .gitignore  CMakeLists.txt  main.c
benchmark/: Count_with_ab  Count_without_ab  Depth2_with_ab  Depth2_without_ab  Depth3_with_ab  Depth3_without_ab  Depth4_with_ab  Depth4_without_ab  Depth5_with_ab  Depth5_without_ab  Depth6_with_ab  Depth6_without_ab  Depth7_with_ab  Depth7_without_ab  script.py  script2.py
config/: config.h
include/: common.h  config.h  graphviz.h  sim.h  state.h  visualize.h
src/: common.c  graphviz.c  sim.c  state.c  visualize.c
test/: main.c
